--- a/src/components/home/hero.css
+++ b/src/components/home/hero.css
@@ -2,8 +2,17 @@
   background-image: url('../../assets/images/pexels-mikebirdy-126271.jpg');
   background-position: center;
   height: 40vh;
-
-  color: #1976D2;
+  div{
+  background: rgba(255, 255, 255, 0.2);
+  padding-left: 5%;
+  padding-right: 5%;
+  /* border-radius: 2px; */
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  color: hsl(210, 79%, 46%);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
